--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta property="og:title" content="Prime Building Solutions | Building the Future, Sustainably" />
     <meta property="og:description" content="Premium renovation and construction services in Rotterdam. Bathrooms, kitchens, home extensions, and complete renovations with expert craftsmanship." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.ico" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PrimeBuildingSolutions" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/favicon.ico" />
     
-    <link rel="icon" type="image/png" href="/src/assets/logo/prime%20logo.png" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
