--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:site" content="@PrimeBuildingSolutions" />
     <meta name="twitter:image" content="/favicon.ico" />
     
-    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
